# streaming-json-analysis

./: .gitignore  ARCHITECTURE.md  Cargo.toml  RATE_ANOMALY_DECISIONS.md  README.md  demo_analyzer.py  demo_ruptures.py  demo_source.py  engine.py  ideas.txt  notes.md  replay_marks.example.json  requirements.txt  stats.md  trigger.py  whitelist.txt
.claude/skills/drive-tui/: SKILL.md  capture.py  diff_snapshots.py  opus_qa_prompt.md  send_keys.sh  start.sh  stop.sh  test_comprehensive.py
.claude/skills/regression-test/: SKILL.md
.github/workflows/: build-cross-binaries.yml
benches/: filter.rs
examples/: README.md
examples/generators/array_preview_case/: README.md  generate_array_preview_case.py
examples/generators/jsonl_synth/: README.md  generate_jsonl_synth.py
examples/generators/large_directory/: README.md  generate_large_directory.py
examples/generators/large_jsonl/: README.md  generate_large_jsonl.py
examples/generators/shape_corpus/: generate_shape_corpus.py
examples/sources/control_http/: README.md  control_client.py
examples/sources/demo_source/: README.md  demo_source.py
examples/sources/directory_stream/: README.md  stream_directory_writer.py
examples/sources/high_volume/: README.md  high_volume_writer.py
examples/sources/http_stream/: README.md  file_server.py  http_stream.py
src/: app.rs  browser.rs  control_http.rs  domain.rs  io.rs  lib.rs  main.rs  persistence.rs  presence.rs  state_watcher.rs  tui.rs
tests/: analyzer_integration.rs  stream_reader_integration.rs  test_type_registry.py
(+2 files in other folders)
