[package]
name = "json_analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
argh = "0.1"
crossterm = "0.28"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
indexmap = "2"
sha2 = "0.10"
rayon = "1"
tiny_http = "0.12"
fs2 = "0.4"
notify = "8"
notify-debouncer-full = "0.6"
gethostname = "0.5"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
mimalloc = { version = "0.1", default-features = false }

[[bench]]
name = "filter"
harness = false
